fix alignment of text in skills section

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ p {
 section {
   height: auto;
   padding: 4rem;
-  margin: 4rem auto 0 auto;
+  margin: 2rem auto 0 auto;
   max-width: 1280px;
 }
 
@@ -149,7 +149,7 @@ span {
 }
 
 .navbar a {
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-family: 'Unbounded', system-ui;
   color: var(--charcoal);
   margin-left: 4rem;
